[gd_scene load_steps=17 format=2]

[ext_resource path="res://Scripts/Capture/Capture.gd" type="Script" id=1]
[ext_resource path="res://Assets/Textures/liquid_molecule_drawn.png" type="Texture" id=2]
[ext_resource path="res://Scenes/DavePreFab/Droplet.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/DavePreFab/molecule.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Textures/cannon.png" type="Texture" id=5]
[ext_resource path="res://Scripts/Capture/cannon.gd" type="Script" id=6]
[ext_resource path="res://Assets/Textures/background_furnace.png" type="Texture" id=7]
[ext_resource path="res://Scripts/Capture/playable_area.gd" type="Script" id=8]
[ext_resource path="res://Scripts/Capture/SpawnerRect.gd" type="Script" id=9]
[ext_resource path="res://Assets/Fonts/monogram.tres" type="DynamicFont" id=10]
[ext_resource path="res://Scenes/DavePreFab/co2_molecule.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scripts/Capture/balls.gd" type="Script" id=12]
[ext_resource path="res://Scenes/DavePreFab/tutorial.tscn" type="PackedScene" id=13]
[ext_resource path="res://Scenes/DavePreFab/ending.tscn" type="PackedScene" id=14]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 700, 700 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 24.452, 500 )

[node name="Capture" type="Node2D"]
script = ExtResource( 1 )

[node name="playable_area" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3
script = ExtResource( 8 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="playable_area"]
position = Vector2( 500, 500 )
shape = SubResource( 2 )

[node name="background_furnace" type="Sprite" parent="."]
texture = ExtResource( 7 )
centered = false

[node name="cannon" type="Sprite" parent="."]
position = Vector2( 500, 0 )
texture = ExtResource( 5 )
script = ExtResource( 6 )
droplet_scene = ExtResource( 3 )

[node name="SpawnerRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 100.0
margin_top = 1050.0
margin_right = 900.0
margin_bottom = 1150.0
color = Color( 1, 0, 0, 0.564706 )
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}
molecule_scene = ExtResource( 4 )
co2_molecule_scene = ExtResource( 11 )

[node name="wall_right" type="StaticBody2D" parent="."]
position = Vector2( 951.493, 0 )
collision_mask = 13

[node name="background_furnace" type="Sprite" parent="wall_right"]
modulate = Color( 0.537255, 0.537255, 0.537255, 1 )
scale = Vector2( 0.048, 1 )
texture = ExtResource( 7 )
centered = false
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="wall_right"]
position = Vector2( 23.838, 500 )
shape = SubResource( 3 )

[node name="wall_left" type="StaticBody2D" parent="."]
collision_mask = 13

[node name="background_furnace" type="Sprite" parent="wall_left"]
modulate = Color( 0.537255, 0.537255, 0.537255, 1 )
scale = Vector2( 0.048, 1 )
texture = ExtResource( 7 )
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="wall_left"]
position = Vector2( 23.838, 500 )
shape = SubResource( 3 )

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bar_bg" type="ColorRect" parent="Control"]
margin_left = 20.0
margin_top = 20.0
margin_right = 220.0
margin_bottom = 70.0
color = Color( 0.415686, 0.415686, 0.415686, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="power_bar" type="ColorRect" parent="Control"]
margin_left = 20.0
margin_top = 20.0
margin_right = 220.0
margin_bottom = 70.0
color = Color( 0.627451, 0.945098, 0.54902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_top = 20.0
margin_right = 980.0
margin_bottom = 40.0
custom_constants/separation = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="score" type="Label" parent="VBoxContainer"]
margin_right = 980.0
margin_bottom = 38.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 10 )
text = "Remaining: 30"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="time" type="Label" parent="VBoxContainer"]
margin_top = 46.0
margin_right = 980.0
margin_bottom = 84.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 10 )
text = "Time: 120"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="balls" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 92.0
margin_right = 980.0
margin_bottom = 130.0
alignment = 2
script = ExtResource( 12 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="ball1" type="TextureRect" parent="VBoxContainer/balls"]
margin_left = 774.0
margin_right = 812.0
margin_bottom = 38.0
texture = ExtResource( 2 )

[node name="ball2" type="TextureRect" parent="VBoxContainer/balls"]
margin_left = 816.0
margin_right = 854.0
margin_bottom = 38.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ball3" type="TextureRect" parent="VBoxContainer/balls"]
margin_left = 858.0
margin_right = 896.0
margin_bottom = 38.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ball4" type="TextureRect" parent="VBoxContainer/balls"]
margin_left = 900.0
margin_right = 938.0
margin_bottom = 38.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ball5" type="TextureRect" parent="VBoxContainer/balls"]
margin_left = 942.0
margin_right = 980.0
margin_bottom = 38.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tutorial" parent="." instance=ExtResource( 13 )]
tutorial_text = "Hit enough carbon molecules in time to win the game

Press the left mouse button to shoot a molecule. Keep in mind that you only have five!

The bar on the left shows how strong you are shooting.

Press the left mouse button to continue."

[node name="ending" parent="." instance=ExtResource( 14 )]

[connection signal="body_exited" from="playable_area" to="playable_area" method="_on_playable_area_body_exited"]
